# logs_dashboard

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  log.py
backend/app/routers/: __init__.py  logs.py
backend/app/schemas/: __init__.py  log.py
backend/scripts/: seed_data.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/logs/[id]/: page.tsx
frontend/src/app/logs/new/: page.tsx
frontend/src/components/: FilterPanel.tsx  Navigation.tsx  Pagination.tsx  SeverityBadge.tsx
frontend/src/lib/: api.ts
